# postgres_kursovaya

./: .gitignore  README.md  main.py  pyproject.toml
src/: config.py  db_manager.py  parser.py  utils.py
