[tool.poetry]
name = "poetry shell"
version = "0.1.0"
description = ""
authors = ["Sergey Petrov"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
psycopg2 = "^2.9.9"
configparser = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
